Remove apache lib for checking blank string